# gbe

./: .gitignore  Cargo.toml  LICENSE.md  README.md
resources/bootrom/: gb_bios.s
src/: app.rs  emucore.rs  lib.rs  main.rs  util.rs
src/app/: audio_backend.rs  package.rs  timing.rs
src/emucore/: audio.rs  cpu.rs  joypad.rs  mem.rs  package.rs  ppu.rs  timer.rs
src/util/: disas.rs
tests/: bootrom_test.rs
