[package]
edition = "2021"
name = "gbe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13"
ringbuf = "0.2.8"
wav = "1.0.0"
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"]}
relm4 = "0.4.4"
relm4-macros = "0.4.4"

[dev-dependencies]
image = "0.24.2"